Move pagination from query to body
This commit will:
* Adjust swagger definition:
  * Remove query parameters
  * Add Paginator to body (and rename object accordingly)
  * Remove Previous/Next headers
* Regenerate swagger server code
* Remove before and after query params (+ related error and tests).
* Adjust handlers and tests
* Make listers code shorter

Rationale: While I liked previous division of parameters into query and
body, (as client could paginate without parsing output thanks to
Previous, Next query parameters, it has been decided to have all
parameters in the body for consistency with Boruta's server.

TODO: finish fixing test
